changed the buttons in the admin dashboard